# Basketball-Plays-Animation

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
qml/: AddPlayerButton.qml  Ball.qml  BallButton.qml  Court.qml  DrawButton.qml  HalfCourt.qml  Main.qml  Player.qml
src/: main.cpp
